Noah: removed prints

--- a/mtcp_kvstore/kvstore.conf
+++ b/mtcp_kvstore/kvstore.conf
@@ -59,7 +59,7 @@ tcp_timewait = 0
 #stat_print = xge1
 #------ DPDK ports -------#
 #VED::commenting the dpdk pkts received logs
-stat_print = dpdk0
+#stat_print = dpdk0
 #stat_print = dpdk0:0
 #stat_print = dpdk0:1
 #stat_print = dpdk1
