update makefile to used .so

--- a/mtcp_kvstore/Makefile
+++ b/mtcp_kvstore/Makefile
@@ -1,5 +1,5 @@
 TARGETS = kvstore
-CC=g++ -g -O3 -Wall  #-fgnu89-inline
+CC=gcc -g -O3 -Wall -fgnu89-inline
 DPDK=1
 PS=0
 NETMAP=0
@@ -8,7 +8,7 @@ NETMAP=0
 DPDK_INC=/home/cs5204dpdk/mtcp/dpdk/include
 DPDK_LIB=/home/cs5204dpdk/mtcp/dpdk/lib/
 
-# mtcp library and header 
+# mtcp library and header
 MTCP_FLD    =/home/cs5204dpdk/mtcp/mtcp
 MTCP_INC    =-I${MTCP_FLD}/include
 MTCP_LIB    =-L${MTCP_FLD}/lib
@@ -20,8 +20,8 @@ UTIL_INC = -I${UTIL_FLD}/include
 
 PS_DIR = /home/cs5204dpdk/mtcp/io_engine/
 PS_INC = ${PS_DIR}/include
-INC = -I./include/ ${UTIL_INC} ${MTCP_INC} -I${UTIL_FLD}/include -I../kvstorelib 
-LIBS = ${MTCP_LIB} -I/usr/local/lib/ -lcityhash -L/usr/local/lib/ -L../kvstorelib ../kvstorelib/kvstorelib.o ../kvstorelib/cuckoo_kvstore.o
+INC = -I./include/ ${UTIL_INC} ${MTCP_INC} -I${UTIL_FLD}/include -I../kvstorelib
+LIBS = ${MTCP_LIB} -I/usr/local/lib/ -lcityhash -L/usr/local/lib/ -L../kvstorelib -lkvstorelib.so
 ifeq ($(PS),1)
 INC += -I{PS_INC}
 LIBS += -lmtcp -L${PS_DIR}/lib -lps -lpthread -lnuma -lrt
