Noah: code quality is bad. here there be dragons as it is midnight now

--- a/mtcp_kvstore/kvstore.conf
+++ b/mtcp_kvstore/kvstore.conf
@@ -41,10 +41,10 @@ max_num_buffers = 10000
 
 # Receive buffer size of sockets
 rcvbuf = 131072
-
+#rcvbuf = 524288
 # Send buffer size of sockets
 sndbuf = 131072
-
+#sndbuf = 524288
 # TCP timeout seconds
 # (tcp_timeout = -1 can disable the timeout check)
 tcp_timeout = 30
